--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 <div id ='resultBox' style="margin-left: auto; margin-right: auto;">
                     <p id='errorbox'></p>
                     <video id='resultVideo' alt="" controls>
-                        <source id="resultSource" src="./demo/results/human_face/001_face/texture_animation.mp4" type="video/mp4">
+                        <source id="resultSource" src="texture_animation.mp4" type="video/mp4">
                     </video>
+                    <img src="result.gif">
                 </div>
                 <script>
                     document.getElementById("submit").onclick = () => {
