--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>displayVideo</h1>
                 <A>Git Hub repository : </A> <A href="https://github.com/thetkim9/unsup3d"> videoDisplay</A>
                 <br>
-                <A>Testing API : </A> <A href="https://ainize.ai/thetkim9/3dto2d"> on Ainize </A>
+                <A>Testing API : </A> <A href="https://ainize.ai/thetkim9/unsup3d"> on Ainize </A>
 
                 <hr class="solid">
 
@@ -36,10 +36,8 @@
                     document.getElementById("submit").onclick = () => {
                         var formData = new FormData();
                         var source = document.getElementById('source').files[0]
-                        var target = document.getElementById('target').files[0]
 
                         formData.append('person_image', source)
-                        formData.append('shirt_image', target)
 
                         fetch(
                             '/render3D',
@@ -54,7 +52,7 @@
                             }
                             else{
                                 document.body.innerHTML += response.statusText
-                                throw Error("fit error")
+                                throw Error("rendering error")
 
                             }
                         })
