--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <title>ClothesVirtualFitting</title>
+        <title>3D Rendering of Human Face</title>
     </head>
     <body>
         <div class = "container">
             <div class="jumbotron mt-3">
 
-                <h1>displayVideo</h1>
+                <h1>3D Rendering of Human Face/h1>
                 <A>Git Hub repository : </A> <A href="https://github.com/thetkim9/unsup3d"> videoDisplay</A>
                 <br>
                 <A>Testing API : </A> <A href="https://ainize.ai/thetkim9/unsup3d"> on Ainize </A>
