--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class = "container">
             <div class="jumbotron mt-3">
 
-                <h1>3D Rendering of Human Face/h1>
-                <A>Git Hub repository : </A> <A href="https://github.com/thetkim9/unsup3d"> videoDisplay</A>
+                <h1>3D Rendering of Human Face</h1>
+                <A>Git Hub repository : </A> <A href="https://github.com/thetkim9/unsup3d"> unsup3d</A>
                 <br>
                 <A>Testing API : </A> <A href="https://ainize.ai/thetkim9/unsup3d"> on Ainize </A>
 
