--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 return response
                             }
                             else{
-                                document.body.innerHTML += response.statusText
+                                document.body.innerHTML += response.status
                                 throw Error("rendering error")
 
                             }
