--- a/index.html
+++ b/index.html
@@ -27,18 +27,30 @@
                     <input type = 'file' id = 'source' style="margin-right: 10px; margin-bottom: 10px;">
                     <button id = "submit" type='submit' class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </button>
                 </div>
+                <progress id="progress_bar" value="60" max="100"> </progress>
 
                 <div id ='resultBox' style="margin-left: auto; margin-right: auto;">
                     <p id='errorbox'></p>
                     <img id="result" src="">
                 </div>
                 <script>
+                    function check_progress(task_id, progress_bar) {
+                        $.get('progress/' + task_id, function(data) {
+                            if (progress < 100) {
+                                progress_bar.set_progress(progress)
+                                setTimeout(check_progress, 1000)
+                            }
+                        })
+                    }
                     document.getElementById("submit").onclick = () => {
                         var formData = new FormData();
-                        var source = document.getElementById('source').files[0]
-
-                        formData.append('person_image', source)
-
+                        var source = document.getElementById('source').files[0];
+                        const { v4: uuidv4 } = require('uuid');
+                        var user_id = uuidv4();
+                        var progress_bar = document.getElementById('progress_bar');
+                        formData.append('person_image', source);
+                        formData.append('user_id', user_id);
+                        check_progress(user_id, progress_bar);
                         fetch(
                             '/render3D',
                             {
