--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         var progress_bar = document.getElementById('progress_bar');
                         formData.append('person_image', source);
                         formData.append('user_id', user_id);
-                        check_progress(user_id, progress_bar);
+                        //check_progress(user_id, progress_bar);
                         fetch(
                             '/render3D',
                             {
