--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     document.getElementById("submit").onclick = () => {
                         var formData = new FormData();
                         var source = document.getElementById('source').files[0];
-                        const { v4: uuidv4 } = require('uuid');
-                        var user_id = uuidv4();
-                        document.body.innerHTML += user_id;
+                        //const { v4: uuidv4 } = require('uuid');
+                        //var user_id = uuidv4();
+                        //document.body.innerHTML += user_id;
                         var progress_bar = document.getElementById('progress_bar');
                         formData.append('person_image', source);
-                        formData.append('user_id', user_id);
+                        //formData.append('user_id', user_id);
                         //check_progress(user_id, progress_bar);
                         fetch(
                             '/render3D',
