--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                         //const { v4: uuidv4 } = require('uuid');
                         //var user_id = uuidv4();
                         var user_id = Math.floor(Math.random()*1000000000);
-                        //document.body.innerHTML += user_id;
+                        document.body.innerHTML += user_id;
                         var progress_bar = document.getElementById('progress_bar');
                         formData.append('person_image', source);
                         formData.append('user_id', user_id);
-                        check_progress(user_id, progress_bar);
+                        //check_progress(user_id, progress_bar);
                         fetch(
                             '/render3D',
                             {
