--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 <script src="jquery-1.6.1.js"></script>
                 <script>
                     function check_progress(task_id, progress_bar) {
-                    document.body.innerHTML += "progress_bar";
+                    document.body.innerHTML += " " + task_id;
                         $.get('progress/' + task_id, function(data) {
+                            document.body.innerHTML += "progress_bar";
                             if (progress < 100) {
                                 progress_bar.set_progress(progress)
                                 setTimeout(check_progress, 1000)
