--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <script>
                     function check_progress(task_id, progress_bar) {
                     alert("wow...");
+                    $("#hello").dialog();
                         $.get('progress/' + task_id, function(data) {
                             alert("wow");
                             if (progress < 100) {
