--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     function check_progress(task_id, progress_bar) {
                     alert("wow...");
                     $("#progress_bar").hide();
+                    alert("wow2");
                         $.get('progress/' + task_id, function(data) {
                             alert("wow");
                             if (progress < 100) {
