--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                 <script>
                     function check_progress(task_id, progress_bar) {
                     alert("wow...");
-                    $("#progress_bar").hide();
                     alert("wow2");
+                    $("#progress_bar").hide();
+                    alert("wow3");
                         $.get('progress/' + task_id, function(data) {
                             alert("wow");
                             if (progress < 100) {
