--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <p id='errorbox'></p>
                     <img id="result" src="">
                 </div>
-                <script src="/workspace/jquery-3.5.1.js"></script>
-                <script src="/workspace/request.js"></script>
+                <script src="jquery-3.5.1.js"></script>
+                <script src="request.js"></script>
             </div>
         </div>
     </body>
