--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <img id="result" src="">
                 </div>
                 <script src="static/jquery-3.5.1.js"></script>
-                <script src="static/request.js"></script>
+                <script src="{{ url_for('static', filename='jquery-3.5.1.js') }}"></script>
+                <script src="{{ url_for('static', filename='request.js') }}"></script>
             </div>
         </div>
     </body>
