--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <button id = "submit" type='submit' class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </button>
                 </div>
                 <progress id="progress_bar" value="0" max="100"> </progress>
+                <p>loading<span id="dots">.</span> time spent: <span id="time">0</span></p>
 
                 <div id ='resultBox' style="margin-left: auto; margin-right: auto;">
                     <p id='errorbox'></p>
