--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <hr class="solid">
 
                 <h2>Upload </h2>
-                <p>We recommend uploading images that mostly consist of human faces</p>
-                <p>since images that require tough face recognition take longer to operate</p>
-                <p>We recommend uploading images that mostly consist of human faces</p>
+                <p>We recommend uploading images that mostly consist of human faces
+                    since images that require tough face recognition take longer to operate</p>
+                <p>Operation generally takes around 20~30 seconds</p>
                 <div id = 'inputImage'>
                     <label for="source">person image : </label>
                     <input type = 'file' id = 'source' style="margin-right: 10px; margin-bottom: 10px;">
