--- a/index.html
+++ b/index.html
@@ -11,22 +11,17 @@
         <title>3D Rendering of Human Face</title>
         <script>
             function readURL(input) {
-                if (input.files && input.files[0]) {
-                    var reader = new FileReader();
-
-                    reader.onload = function (e) {
-                        $('#blah')
-                            .attr('src', e.target.result)
-                            .width(150)
-                            .height(200);
-                    };
-
-                    reader.readAsDataURL(input.files[0]);
-                }
+              if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                  $('#preload')
+                    .attr('src', e.target.result)
+                    .width(150)
+                    .height(200);
+                };
+                reader.readAsDataURL(input.files[0]);
+              }
             }
-            $("#source").change(function(){
-                readURL(this);
-            });
         </script>
     </head>
     <body>
@@ -46,7 +41,7 @@
                 <p>Operation generally takes around 20~30 seconds</p>
                 <div id = 'inputImage'>
                     <label for="source">person image : </label>
-                    <input type = 'file' id = 'source' style="margin-right: 10px; margin-bottom: 10px;">
+                    <input type = 'file' id = 'source' onchange="readURL(this);" style="margin-right: 10px; margin-bottom: 10px;">
                     <button id = "submit" type='submit' class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </button>
                 </div>
                 <progress id="progress_bar" value="0" max="100"> </progress>
@@ -54,7 +49,7 @@
 
                 <div id ='resultBox' style="margin-left: auto; margin-right: auto;">
                     <p id='errorbox'></p>
-                    <img id="result" src="">
+                    <img id="preload" src="#" alt="image preload" /><img id="result" src="">
                 </div>
                 <script src="{{ url_for('static', filename='jquery-3.5.1.js') }}"></script>
                 <script src="{{ url_for('static', filename='request.js') }}"></script>
