--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     since images that require tough face recognition take longer to operate</p>
                 <p>Operation generally takes around 20~30 seconds</p>
                 <div id = 'inputImage'>
-                    <label for="source">person image : </label>
+                    <label for="source">insert 2D person image : </label>
                     <input type = 'file' id = 'source' onchange="readURL(this);" style="margin-right: 10px; margin-bottom: 10px;">
                     <button id = "submit" type='submit' class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </button>
                 </div>
