--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <p id='errorbox'></p>
                     <img id="preload" src="#">  <img id="result" src="">
                 </div>
+                <script data-main="{{ url_for('static', filename='request.js') }}" src="{{ url_for('static', filename='require.js') }}"></script>
                 <script src="{{ url_for('static', filename='jquery-3.5.1.js') }}"></script>
                 <script src="{{ url_for('static', filename='request.js') }}"></script>
             </div>
