--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     .height(200);
                 };
                 reader.readAsDataURL(input.files[0]);
+                document.getElementById("preload").style.visibility = "visible";
               }
             }
         </script>
