--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>time spent: <span id="time">0</span>s</p>
                 <div id ='resultBox' style="margin-left: auto; margin-right: auto;">
                     <p id='errorbox'></p>
-                    <img id="preload" src="#">  <img id="result" src="">
+                    <img id="preload" src="sampleIn.gif">  <img id="result" src="sampleOut.gif">
                 </div>
                 <script src="{{ url_for('static', filename='jquery-3.5.1.js') }}"></script>
                 <script src="{{ url_for('static', filename='request.js') }}"></script>
