--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div id = 'inputImage'>
                     <label for="source">insert 2D person image : </label>
                     <input type = 'file' id = 'source' onchange="readURL(this);" style="margin-right: 10px; margin-bottom: 10px;">
-                    <input type="submit" id = "submit" class="btn btn-primary btn-lg" style="margin-left: auto;"> Run </input>
+                    <input type="submit" id = "submit" class="btn btn-primary btn-lg" style="margin-left: auto;">
                 </div>
                 <progress id="progress_bar" value="0" max="100"> </progress>
                 <p id="load">loading<span id="dots">.</span></p>
