--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <progress id="progress_bar" value="0" max="100"> </progress>
                 <p id="load">loading<span id="dots">.</span></p>
                 <p>time spent: <span id="time">0</span>s</p>
+                <p>Number of pending requests ahead: <span id="pending">0</span></p>
                 <div id ='resultBox' style="margin-left: auto; margin-right: auto;">
                     <p id='errorbox'></p>
                     <img id="preload" src="{{ url_for('static', filename='sampleIn.png') }}">
